# delta-lambdas

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
lambdas/query-metrics/: Cargo.toml  manifest.yml
lambdas/query-metrics/src/: cli.rs  config.rs  main.rs
