[package]
name = "query-metrics"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.79"
aws-config = "1.1.2"
aws-sdk-cloudwatch = "1.11.0"
aws-sdk-config = "1.11.0"
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["eventbridge"] }
base64 = "0.21.7"
deltalake = { version = "0.16.5", features = ["datafusion", "s3"] }

lambda_runtime = "0.8.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
url = { version = "2.5.0", features = ["serde"] }

