[package]
name = "query-metrics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "query-metrics"
path = "src/cli.rs"

[[bin]]
name = "query-metrics-lambda"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
aws-config = "1.1.2"
aws-sdk-cloudwatch = "1.11.0"
aws-sdk-config = "1.11.0"
aws_lambda_events = { version = "0.12.0" }
base64 = "0.21.7"
deltalake-core = { version = "0.17.0", features = ["datafusion"] }
deltalake-aws = { version = "0.1.0" }

lambda_runtime = "0.8.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
url = { version = "2.5.0", features = ["serde"] }

